[gd_scene load_steps=14 format=3 uid="uid://ct3xx5yu7qsas"]

[ext_resource type="Script" path="res://scripts/drip_coffee_mini_game.gd" id="1_3gqi6"]
[ext_resource type="PackedScene" uid="uid://b5nanus0xc7ci" path="res://scenes/pachinko_nub.tscn" id="1_w3hh1"]
[ext_resource type="Script" path="res://scripts/Catcher.gd" id="1_y7rfn"]
[ext_resource type="Texture2D" uid="uid://df3uxqwbc6ncl" path="res://art/32x32-circle.png" id="2_144bq"]
[ext_resource type="Texture2D" uid="uid://caaemqq2ww1yi" path="res://art/32x32-cube.png" id="2_i25f8"]
[ext_resource type="Texture2D" uid="uid://cepi7mwidikf1" path="res://art/catcher-one.png" id="2_i8584"]
[ext_resource type="Texture2D" uid="uid://d21lku5hu7toa" path="res://art/catcher-two.png" id="3_cenpx"]
[ext_resource type="Texture2D" uid="uid://fgynkt0far4x" path="res://art/catcher-empty.png" id="4_03w1o"]
[ext_resource type="FontFile" uid="uid://cooklxfw2lwhf" path="res://fonts/PixelOperatorMono.ttf" id="6_5e2yp"]
[ext_resource type="AudioStream" uid="uid://crvcdnjnl5guh" path="res://sound/interact-successful.ogg" id="10_rm145"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sn0fj"]
size = Vector2(47, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlnjv"]
size = Vector2(789, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfuiu"]
size = Vector2(72, 639)

[node name="DripCoffeeMiniGame" type="Node2D" node_paths=PackedStringArray("spawnPoints")]
script = ExtResource("1_3gqi6")
numberOfBallsRequired = 2
maxNumberOfBallsAllowed = 7
spawnPoints = [NodePath("SpawnPoints/Node2D"), NodePath("SpawnPoints/Node2D2"), NodePath("SpawnPoints/Node2D3"), NodePath("SpawnPoints/Node2D4"), NodePath("SpawnPoints/Node2D5"), NodePath("SpawnPoints/Node2D6"), NodePath("SpawnPoints/Node2D7"), NodePath("SpawnPoints/Node2D8")]
catcherOneSprite = ExtResource("2_i8584")
catcherTwoSprite = ExtResource("3_cenpx")

[node name="Backdrop" type="Sprite2D" parent="."]
modulate = Color(0.296875, 0.171875, 0.128906, 1)
position = Vector2(320.5, 171)
scale = Vector2(20.0313, 10.625)
texture = ExtResource("2_i25f8")

[node name="Backdrop2" type="Sprite2D" parent="."]
modulate = Color(0.46875, 0.273438, 0.171875, 1)
position = Vector2(573, 13)
scale = Vector2(10.5, 10.4688)
texture = ExtResource("2_144bq")

[node name="Instructions" type="Label" parent="."]
offset_left = 414.0
offset_top = 305.0
offset_right = 638.0
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("6_5e2yp")
theme_override_font_sizes/font_size = 32
text = "Catch! [A & D]"

[node name="Catcher" type="Node2D" parent="."]
position = Vector2(320, 293)
script = ExtResource("1_y7rfn")
speed = 400.0
leftBound = 48
rightBound = 580

[node name="Sprite2D" type="Sprite2D" parent="Catcher"]
texture = ExtResource("4_03w1o")

[node name="Area2D" type="Area2D" parent="Catcher"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catcher/Area2D"]
position = Vector2(0.5, -24)
shape = SubResource("RectangleShape2D_sn0fj")

[node name="PachinkoThings" type="Node2D" parent="."]

[node name="Row1" type="Node2D" parent="PachinkoThings"]
position = Vector2(0, -46)

[node name="PachinkoNub" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(40, 92)

[node name="PachinkoNub2" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(101, 91)

[node name="PachinkoNub3" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(167, 91)

[node name="PachinkoNub4" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(228, 90)

[node name="PachinkoNub5" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(297, 90)

[node name="PachinkoNub6" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(358, 89)

[node name="PachinkoNub7" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(424, 89)

[node name="PachinkoNub8" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(485, 88)

[node name="PachinkoNub9" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(543, 87)

[node name="PachinkoNub10" parent="PachinkoThings/Row1" instance=ExtResource("1_w3hh1")]
position = Vector2(604, 86)

[node name="Row2" type="Node2D" parent="PachinkoThings"]
position = Vector2(35, -10)

[node name="PachinkoNub" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(40, 92)

[node name="PachinkoNub2" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(101, 91)

[node name="PachinkoNub3" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(167, 91)

[node name="PachinkoNub4" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(228, 90)

[node name="PachinkoNub5" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(297, 90)

[node name="PachinkoNub6" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(358, 89)

[node name="PachinkoNub7" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(424, 89)

[node name="PachinkoNub8" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(485, 88)

[node name="PachinkoNub9" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(543, 87)

[node name="PachinkoNub10" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(604, 86)

[node name="PachinkoNub11" parent="PachinkoThings/Row2" instance=ExtResource("1_w3hh1")]
position = Vector2(-22, 90)

[node name="Row3" type="Node2D" parent="PachinkoThings"]
position = Vector2(11, 28)

[node name="PachinkoNub" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(40, 92)

[node name="PachinkoNub2" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(101, 91)

[node name="PachinkoNub3" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(167, 91)

[node name="PachinkoNub4" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(228, 90)

[node name="PachinkoNub5" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(297, 90)

[node name="PachinkoNub6" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(358, 89)

[node name="PachinkoNub7" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(424, 89)

[node name="PachinkoNub8" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(485, 88)

[node name="PachinkoNub9" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(543, 87)

[node name="PachinkoNub10" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(604, 86)

[node name="PachinkoNub11" parent="PachinkoThings/Row3" instance=ExtResource("1_w3hh1")]
position = Vector2(-22, 90)

[node name="Row4" type="Node2D" parent="PachinkoThings"]
position = Vector2(-26, 76)

[node name="PachinkoNub" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(40, 92)

[node name="PachinkoNub2" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(101, 91)

[node name="PachinkoNub3" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(167, 91)

[node name="PachinkoNub4" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(228, 90)

[node name="PachinkoNub5" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(297, 90)

[node name="PachinkoNub6" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(358, 89)

[node name="PachinkoNub7" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(424, 89)

[node name="PachinkoNub8" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(485, 88)

[node name="PachinkoNub9" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(543, 87)

[node name="PachinkoNub10" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(604, 86)

[node name="PachinkoNub11" parent="PachinkoThings/Row4" instance=ExtResource("1_w3hh1")]
position = Vector2(-22, 90)

[node name="Row5" type="Node2D" parent="PachinkoThings"]
position = Vector2(7, 122)

[node name="PachinkoNub" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(40, 92)

[node name="PachinkoNub2" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(101, 91)

[node name="PachinkoNub3" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(167, 91)

[node name="PachinkoNub4" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(228, 90)

[node name="PachinkoNub5" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(297, 90)

[node name="PachinkoNub6" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(358, 89)

[node name="PachinkoNub7" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(424, 89)

[node name="PachinkoNub8" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(485, 88)

[node name="PachinkoNub9" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(543, 87)

[node name="PachinkoNub10" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(604, 86)

[node name="PachinkoNub11" parent="PachinkoThings/Row5" instance=ExtResource("1_w3hh1")]
position = Vector2(-22, 90)

[node name="WorldBounds" type="Node2D" parent="."]

[node name="Area2D2" type="Area2D" parent="WorldBounds"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/Area2D2"]
position = Vector2(334, 452)
shape = SubResource("RectangleShape2D_vlnjv")

[node name="Area2D" type="Area2D" parent="WorldBounds"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/Area2D"]
position = Vector2(-97, 133.5)
shape = SubResource("RectangleShape2D_jfuiu")

[node name="Area2D3" type="Area2D" parent="WorldBounds"]
scale = Vector2(0.99921, 1)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds/Area2D3"]
position = Vector2(764, 133)
shape = SubResource("RectangleShape2D_jfuiu")

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(0, 29)

[node name="Node2D" type="Node2D" parent="SpawnPoints"]
position = Vector2(296, -66)

[node name="Node2D2" type="Node2D" parent="SpawnPoints"]
position = Vector2(193, -109)

[node name="Node2D3" type="Node2D" parent="SpawnPoints"]
position = Vector2(48, -76)

[node name="Node2D4" type="Node2D" parent="SpawnPoints"]
position = Vector2(107, -121)

[node name="Node2D5" type="Node2D" parent="SpawnPoints"]
position = Vector2(369, -41)

[node name="Node2D6" type="Node2D" parent="SpawnPoints"]
position = Vector2(428, -110)

[node name="Node2D7" type="Node2D" parent="SpawnPoints"]
position = Vector2(513, -66)

[node name="Node2D8" type="Node2D" parent="SpawnPoints"]
position = Vector2(330, -142)

[node name="CatchSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_rm145")
volume_db = -5.0

[connection signal="body_entered" from="Catcher/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="WorldBounds/Area2D2" to="." method="_on_bounds_body_entered"]
[connection signal="body_entered" from="WorldBounds/Area2D" to="." method="_on_bounds_body_entered"]
[connection signal="body_entered" from="WorldBounds/Area2D3" to="." method="_on_bounds_body_entered"]
